# sofa-cmake

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sofa-config.cmake.in
.circleci/: config.yml  config_old.yml
.circleci/conda.recipe/: bld.bat  build.sh  meta.yaml
.conda/: build.sh  conda_build_config.yaml  meta.yaml
.travis_scripts/: build_test.sh  conda_setup.sh  deploy.sh  install_miniconda.sh  lib_version.sh
doc/: manual.lis  sofa_lib.lis
src/: CMakeLists.txt  atcc13.c  atccq.c  fk425.c  fk45z.c  fk524.c  fk54z.c  moon98.c  pvstar.c  sofa.h  sofam.h  starpm.c  starpv.c  t_sofa_c.c
tests/: t_sofa_c.c
tools/conda.build/: meta.yaml
